WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134451
DRT in iOS sim fails to load fonts
https://bugs.webkit.org/show_bug.cgi?id=134451
Summary
DRT in iOS sim fails to load fonts
Myles C. Maxfield
Reported
2014-06-30 12:52:17 PDT
DRT in iOS sim crashes while loading fonts
Attachments
Patch
(2.42 KB, patch)
2014-06-30 12:53 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-30 12:53:09 PDT
Created
attachment 234087
[details]
Patch
Geoffrey Garen
Comment 2
2014-06-30 13:15:05 PDT
Comment on
attachment 234087
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-06-30 13:57:48 PDT
Comment on
attachment 234087
[details]
Patch Clearing flags on attachment: 234087 Committed
r170596
: <
http://trac.webkit.org/changeset/170596
>
WebKit Commit Bot
Comment 4
2014-06-30 13:57:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug