DRT in iOS sim crashes while loading fonts https://bugs.webkit.org/show_bug.cgi?id=134451

Reviewed by Geoffrey Garen.

The magic linker symbols had the same name, and were therefore being unified
to a single font file. Then, adding the same file twice was failing.

* DumpRenderTree/mac/DumpRenderTree.mm:
(activateFontsIOS):


Canonical link: https://commits.webkit.org/152429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170596 268f45cc-cd09-0410-ab3c-d52691b4dbfc